[gd_scene load_steps=34 format=2]

[ext_resource path="res://gd/upgrade_menu.gd" type="Script" id=1]
[ext_resource path="res://assets/ui/kenney_ui/PNG/grey_button07.png" type="Texture" id=2]
[ext_resource path="res://assets/ui/kenney_ui/PNG/blue_button06.png" type="Texture" id=3]
[ext_resource path="res://assets/ui/kenney_ui/PNG/blue_button11.png" type="Texture" id=4]
[ext_resource path="res://assets/towers/shotgun/default/3_down.png" type="Texture" id=5]
[ext_resource path="res://assets/towers/shotgun/default/3_left.png" type="Texture" id=6]
[ext_resource path="res://assets/towers/shotgun/default/3_leftdown.png" type="Texture" id=7]
[ext_resource path="res://assets/towers/shotgun/default/3_leftup.png" type="Texture" id=8]
[ext_resource path="res://assets/towers/shotgun/default/3_right.png" type="Texture" id=9]
[ext_resource path="res://assets/towers/shotgun/default/3_rightdown.png" type="Texture" id=10]
[ext_resource path="res://assets/towers/shotgun/default/3_rightup.png" type="Texture" id=11]
[ext_resource path="res://assets/towers/shotgun/default/3_up.png" type="Texture" id=12]
[ext_resource path="res://assets/towers/shotgun/default/2_down.png" type="Texture" id=13]
[ext_resource path="res://assets/towers/shotgun/default/2_leftdown.png" type="Texture" id=14]
[ext_resource path="res://assets/towers/shotgun/default/2_left.png" type="Texture" id=15]
[ext_resource path="res://assets/towers/shotgun/default/2_leftup.png" type="Texture" id=16]
[ext_resource path="res://assets/towers/shotgun/default/2_up.png" type="Texture" id=17]
[ext_resource path="res://assets/towers/shotgun/default/2_rightup.png" type="Texture" id=18]
[ext_resource path="res://assets/towers/shotgun/default/2_right.png" type="Texture" id=19]
[ext_resource path="res://assets/towers/shotgun/default/2_rightdown.png" type="Texture" id=20]
[ext_resource path="res://assets/towers/shotgun/default/1_down.png" type="Texture" id=21]
[ext_resource path="res://assets/towers/shotgun/default/1_leftdown.png" type="Texture" id=22]
[ext_resource path="res://assets/towers/shotgun/default/1_left.png" type="Texture" id=23]
[ext_resource path="res://assets/towers/shotgun/default/1_leftup.png" type="Texture" id=24]
[ext_resource path="res://assets/towers/shotgun/default/1_up.png" type="Texture" id=25]
[ext_resource path="res://assets/towers/shotgun/default/1_rightup.png" type="Texture" id=26]
[ext_resource path="res://assets/towers/shotgun/default/1_right.png" type="Texture" id=27]
[ext_resource path="res://assets/towers/shotgun/default/1_rightdown.png" type="Texture" id=28]
[ext_resource path="res://assets/towers/mg/default/mg_spriteframes.tres" type="SpriteFrames" id=29]
[ext_resource path="res://assets/towers/laser/default/laser_spriteframes.tres" type="SpriteFrames" id=30]
[ext_resource path="res://assets/towers/pistol/default/pistol_spriteframes.tres" type="SpriteFrames" id=31]
[ext_resource path="res://assets/ui/kenney_ui/PNG/grey_boxCross.png" type="Texture" id=32]

[sub_resource type="SpriteFrames" id=1]

animations = [ {
"frames": [ ExtResource( 5 ), ExtResource( 6 ), ExtResource( 7 ), ExtResource( 8 ), ExtResource( 9 ), ExtResource( 10 ), ExtResource( 11 ), ExtResource( 12 ) ],
"loop": true,
"name": "level3",
"speed": 5.0
}, {
"frames": [ ExtResource( 13 ), ExtResource( 14 ), ExtResource( 15 ), ExtResource( 16 ), ExtResource( 17 ), ExtResource( 18 ), ExtResource( 19 ), ExtResource( 20 ) ],
"loop": true,
"name": "level2",
"speed": 5.0
}, {
"frames": [ ExtResource( 21 ), ExtResource( 22 ), ExtResource( 23 ), ExtResource( 24 ), ExtResource( 25 ), ExtResource( 26 ), ExtResource( 27 ), ExtResource( 28 ) ],
"loop": true,
"name": "level1",
"speed": 5.0
} ]

[node name="upgrade_menu" type="Node2D"]

script = ExtResource( 1 )

[node name="shotgun" type="Node2D" parent="." index="0"]

[node name="shotgun_upgrade" type="TextureButton" parent="shotgun" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -25.0
margin_top = -112.0
margin_right = 24.0
margin_bottom = -63.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = true
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 2 )
texture_pressed = ExtResource( 3 )
texture_hover = ExtResource( 4 )
_sections_unfolded = [ "Textures" ]

[node name="animation" type="AnimatedSprite" parent="shotgun/shotgun_upgrade" index="0"]

position = Vector2( 23.8731, 22.4391 )
frames = SubResource( 1 )
animation = "level2"
frame = 2
playing = true

[node name="mg" type="Node2D" parent="." index="1"]

editor/display_folded = true
visible = false

[node name="mg_upgrade" type="TextureButton" parent="mg" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -25.0
margin_top = -112.0
margin_right = 24.0
margin_bottom = -63.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = true
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 2 )
texture_pressed = ExtResource( 3 )
texture_hover = ExtResource( 4 )
_sections_unfolded = [ "Textures" ]

[node name="animation" type="AnimatedSprite" parent="mg/mg_upgrade" index="0"]

position = Vector2( 23.8731, 22.4391 )
frames = ExtResource( 29 )
animation = "level2"
frame = 1
playing = true

[node name="laser" type="Node2D" parent="." index="2"]

editor/display_folded = true
visible = false

[node name="laser_upgrade" type="TextureButton" parent="laser" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -25.0
margin_top = -112.0
margin_right = 24.0
margin_bottom = -63.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = true
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 2 )
texture_pressed = ExtResource( 3 )
texture_hover = ExtResource( 4 )
_sections_unfolded = [ "Textures" ]

[node name="animation" type="AnimatedSprite" parent="laser/laser_upgrade" index="0"]

position = Vector2( 23.8731, 22.4391 )
frames = ExtResource( 30 )
animation = "level2"
playing = true

[node name="pistol" type="Node2D" parent="." index="3"]

editor/display_folded = true
visible = false

[node name="pistol_upgrade" type="TextureButton" parent="pistol" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -25.0
margin_top = -112.0
margin_right = 24.0
margin_bottom = -63.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = true
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 2 )
texture_pressed = ExtResource( 3 )
texture_hover = ExtResource( 4 )
_sections_unfolded = [ "Textures" ]

[node name="animation" type="AnimatedSprite" parent="pistol/pistol_upgrade" index="0"]

position = Vector2( 23.8731, 22.4391 )
frames = ExtResource( 31 )
animation = "level2"
frame = 1
playing = true

[node name="x" type="TextureButton" parent="." index="4"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 77.0
margin_top = -108.0
margin_right = 117.0
margin_bottom = -68.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 32 )
_sections_unfolded = [ "Textures" ]

[connection signal="pressed" from="shotgun/shotgun_upgrade" to="." method="_on_upgrade_pressed"]

[connection signal="pressed" from="mg/mg_upgrade" to="." method="_on_upgrade_pressed"]

[connection signal="pressed" from="x" to="." method="_on_x_pressed"]


